--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     },
     "parserOptions": {
       "ecmaVersion": 11,
+      "sourceType": "module",
       "ecmaFeatures": {
         "experimentalObjectRestSpread":true
       }
