--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "rm -rf docs; react-scripts build; mv build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "docs": "rm -rf docs && react-scripts-build && mv build docs"
+    "docs": "rm -rf docs && react-scripts build && mv build docs"
   },
   "eslintConfig": {
     "extends": [
